--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>What's The Point(er)</title>
+  <script type="module" crossorigin src="/https://eorev.github.io/WhatsThePointer/assets/index.9807a0fe.js"></script>
 </head>
 
 <body>
 	<div id="app"></div>
-	<script type="module" src="src/main.ts"></script>
+	
 </body>
 
 </html>
