--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>What's The Point(er)</title>
-  <script type="module" crossorigin src="/https://eorev.github.io/WhatsThePointer/assets/index.9807a0fe.js"></script>
+  <script type="module" crossorigin src="/WhatsThePointer/assets/index.9807a0fe.js"></script>
 </head>
 
 <body>
